force-app/main/default/objects/Product2/fields/Average_Weekly_Sales_Hyper__c.field-meta.xml
<CustomField>
    <fullName>Average_Weekly_Sales_Hyper__c</fullName>
    <description>(VMH)</description>
    <label>Average Weekly Sales Hyper</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>