force-app/main/default/objects/Product2/fields/Average_Weekly_Sales_Super__c.field-meta.xml
<CustomField>
    <fullName>Average_Weekly_Sales_Super__c</fullName>
    <label>Average Weekly Sales Super</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>