force-app/main/default/objects/Product2/fields/Brand_Parent__c.field-meta.xml
<CustomField>
    <fullName>Brand_Parent__c</fullName>
    <formula>Brand__r.Brand_Parent__r.Name</formula>
    <label>Brand Parent</label>
    <type>Text</type>
</CustomField>