force-app/main/default/objects/Product2/fields/Element_nb__c.field-meta.xml
<CustomField>
    <fullName>Element_nb__c</fullName>
    <description>Number of items on a palett delivery</description>
    <label>Elements Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>