force-app/main/default/objects/Product2/fields/IsMaster_Higher_Level_Packaging__c.field-meta.xml
<CustomField>
    <fullName>IsMaster_Higher_Level_Packaging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define the Principal Higher-Level Packaging (generate automatically at the product creation or updated auto if product update)</description>
    <label>IsMaster Higher-Level Packaging</label>
    <type>Checkbox</type>
</CustomField>