force-app/main/default/objects/Product2/fields/IsOutOfStock__c.field-meta.xml
<CustomField>
    <fullName>IsOutOfStock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOutOfStock</label>
    <type>Checkbox</type>
</CustomField>