force-app/main/default/objects/Product2/fields/IsPermanent__c.field-meta.xml
<CustomField>
    <fullName>IsPermanent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permanent</label>
    <type>Checkbox</type>
</CustomField>