force-app/main/default/objects/Product2/fields/IsSeasonal__c.field-meta.xml
<CustomField>
    <fullName>IsSeasonal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is seasonal product.</description>
    <inlineHelpText>Définir comme étant un produit saisonnier</inlineHelpText>
    <label>Seasonal</label>
    <type>Checkbox</type>
</CustomField>