force-app/main/default/objects/Product2/fields/IsSwitch__c.field-meta.xml
<CustomField>
    <fullName>IsSwitch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Switch</label>
    <type>Checkbox</type>
</CustomField>