force-app/main/default/objects/Product2/fields/IsTradeItemADisplayUnit__c.field-meta.xml
<CustomField>
    <fullName>IsTradeItemADisplayUnit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indication que l&apos;unité commerciale déclarée est un présentoir garni (oui ou non). Un présentoir garni est une unité composée d&apos;un support utilisé en magasin pour la présentation des produits, qui a été garnie chez le fournisseur d&apos;un ou plusieurs types d&apos;unités consommateur.</description>
    <label>Is TradeItem A DisplayUnit</label>
    <type>Checkbox</type>
</CustomField>