force-app/main/default/objects/Product2/fields/Logo_Medium__c.field-meta.xml
<CustomField>
    <fullName>Logo_Medium__c</fullName>
    <description>ideal pour les bouteilles</description>
    <formula>IF (NOT(ISBLANK(DisplayUrl)), IMAGE(DisplayUrl, &quot;Pas d&apos;image&quot;, 240 , 240 ),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>