force-app/main/default/objects/Product2/fields/Logo_Small__c.field-meta.xml
<CustomField>
    <fullName>Logo_Small__c</fullName>
    <formula>IMAGE( DisplayUrl , &quot;Pas d&apos;image&quot;, 45, 45)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Small</label>
    <type>Text</type>
</CustomField>