force-app/main/default/objects/Product2/fields/MainEANProduct__c.field-meta.xml
<CustomField>
    <fullName>MainEANProduct__c</fullName>
    <formula>Consumer_Trade_Item__r.Product_EAN__c</formula>
    <label>Main EAN Product</label>
    <type>Text</type>
</CustomField>