force-app/main/default/objects/Product2/fields/Market_AvailableToOrder_date__c.field-meta.xml
<CustomField>
    <fullName>Market_AvailableToOrder_date__c</fullName>
    <label>Market ATO Date</label>
    <type>Date</type>
</CustomField>