force-app/main/default/objects/Product2/fields/Market_Introduction_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Introduction_Date__c</fullName>
    <label>Market Introduction Date</label>
    <type>Date</type>
</CustomField>