force-app/main/default/objects/Product2/fields/Negoptim__Animation__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Animation__c</fullName>
    <label>Animation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>