force-app/main/default/objects/Product2/fields/Negoptim__Average_Weekly_Sales_CashAndCarry__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Average_Weekly_Sales_CashAndCarry__c</fullName>
    <label>Average Weekly Sales Cash&amp;Carry</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>