force-app/main/default/objects/Product2/fields/Negoptim__Average_Weekly_Sales_Drive__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Average_Weekly_Sales_Drive__c</fullName>
    <label>Average Weekly Sales Drive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>