force-app/main/default/objects/Product2/fields/Negoptim__Average_Weekly_Sales_Web__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Average_Weekly_Sales_Web__c</fullName>
    <label>Average Weekly Sales Web</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>