force-app/main/default/objects/Product2/fields/Negoptim__Brand__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Negoptim__Brand__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>