force-app/main/default/objects/Product2/fields/Negoptim__Brand_Parent__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Brand_Parent__c</fullName>
    <formula>Negoptim__Brand__r.Negoptim__Brand_Parent__r.Name</formula>
    <label>Brand Parent</label>
    <type>Text</type>
</CustomField>