force-app/main/default/objects/Product2/fields/Negoptim__Category__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Niveau 4 Catégorie</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Negoptim__Orga_HE__c.Negoptim__Set_Product_link_level__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Negoptim__Orga_HE__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>