force-app/main/default/objects/Product2/fields/Negoptim__Consumer_Trade_Item__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Consumer_Trade_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Retail consumer trade item/base unit level (UC = Unité Consommateur)</description>
    <label>Consumer Trade Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produits (Consumer Trade Item)</relationshipLabel>
    <relationshipName>Produits1</relationshipName>
    <type>Lookup</type>
</CustomField>