force-app/main/default/objects/Product2/fields/Negoptim__Ext_id__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ext_id__c</fullName>
    <externalId>true</externalId>
    <label>Ext id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>