force-app/main/default/objects/Product2/fields/Negoptim__Hidden_for_search__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Hidden_for_search__c</fullName>
    <defaultValue>&quot;..&quot;</defaultValue>
    <label>Hidden for search</label>
    <length>2</length>
    <type>Text</type>
</CustomField>