force-app/main/default/objects/Product2/fields/Negoptim__IsInnovation__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__IsInnovation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Innovation</label>
    <type>Checkbox</type>
</CustomField>