force-app/main/default/objects/Product2/fields/Negoptim__IsOutOfStock__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__IsOutOfStock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOutOfStock</label>
    <type>Checkbox</type>
</CustomField>