force-app/main/default/objects/Product2/fields/Negoptim__IsPromo__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__IsPromo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Promotional item</description>
    <inlineHelpText>Définir comme étant un produit promotion</inlineHelpText>
    <label>Promo</label>
    <type>Checkbox</type>
</CustomField>