force-app/main/default/objects/Product2/fields/Negoptim__IsRenovation__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__IsRenovation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Renovation</label>
    <type>Checkbox</type>
</CustomField>