force-app/main/default/objects/Product2/fields/Negoptim__IsSwitch__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__IsSwitch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Switch</label>
    <type>Checkbox</type>
</CustomField>