force-app/main/default/objects/Product2/fields/Negoptim__IsTradeItemAConsumerUnit__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__IsTradeItemAConsumerUnit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indication que l&apos;unité commerciale déclarée est une unité consommateur (oui ou non).</description>
    <label>Is TradeItem A ConsumerUnit</label>
    <type>Checkbox</type>
</CustomField>