force-app/main/default/objects/Product2/fields/Negoptim__Last_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Last_Unit_Cost__c</fullName>
    <label>Last Unit Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>