force-app/main/default/objects/Product2/fields/Negoptim__Logo__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Logo__c</fullName>
    <label>Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>