force-app/main/default/objects/Product2/fields/Negoptim__MainEANProduct__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__MainEANProduct__c</fullName>
    <formula>Negoptim__Consumer_Trade_Item__r.Negoptim__Product_EAN__c</formula>
    <label>Main EAN Product</label>
    <type>Text</type>
</CustomField>