force-app/main/default/objects/Product2/fields/Negoptim__Market_End_of_Life_Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Market_End_of_Life_Date__c</fullName>
    <label>Market End of Life Date</label>
    <type>Date</type>
</CustomField>