force-app/main/default/objects/Product2/fields/Negoptim__ParentCategory__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ParentCategory__c</fullName>
    <formula>Negoptim__Category__r.Negoptim__Parent_Element__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categogy Parent</label>
    <type>Text</type>
</CustomField>