force-app/main/default/objects/Product2/fields/Negoptim__Product_MasterSupplier__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Product_MasterSupplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Is the master supplier</description>
    <inlineHelpText>Est le client principal pour le produit</inlineHelpText>
    <label>Product Master Supplier</label>
    <referenceTo>Negoptim__Supplier__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>