force-app/main/default/objects/Product2/fields/Negoptim__Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Product_Name__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>