force-app/main/default/objects/Product2/fields/Negoptim__Product_Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Product_Reference_Type__c</fullName>
    <description>Indicate if the product is a reference product to another product of type Switch or Reno.
Fill automtically when the product is selected as a reference by another product of type Switch or Reno.</description>
    <label>Product Reference Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Reno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>