force-app/main/default/objects/Product2/fields/Negoptim__ProductType__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NationalBrand</fullName>
                <label>National Brand</label>
            </value>
            <value>
                <fullName>PPX</fullName>
            </value>
            <value>
                <fullName>Produit</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>SBX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>