force-app/main/default/objects/Product2/fields/Negoptim__RankingConvenience__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__RankingConvenience__c</fullName>
    <label>Ranking Conv</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>