force-app/main/default/objects/Product2/fields/Negoptim__RankingHyper__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__RankingHyper__c</fullName>
    <label>Ranking Hyper</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>