force-app/main/default/objects/Product2/fields/Negoptim__RankingWeb__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__RankingWeb__c</fullName>
    <label>Ranking Web</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>