force-app/main/default/objects/Product2/fields/Negoptim__Reference_Product__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Reference_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link history for switch product (allocate automatically reference product statistics)</description>
    <inlineHelpText>Produit d&apos;origine qui est remplacé par un switch ou réno</inlineHelpText>
    <label>Reference Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Negoptim__Product_Reference_Type__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produits</relationshipLabel>
    <relationshipName>Produits</relationshipName>
    <type>Lookup</type>
</CustomField>