force-app/main/default/objects/Product2/fields/Negoptim__Status__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Status__c</fullName>
    <inlineHelpText>Etape du cycle de vie du produit</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initialization</fullName>
            </value>
            <value>
                <fullName>In process of creation</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>In preparation</fullName>
            </value>
            <value>
                <fullName>Pre opening</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>On sale</fullName>
            </value>
            <value>
                <fullName>In process of deletion</fullName>
            </value>
            <value>
                <fullName>EOL</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>